--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-service
-  namespace: auth
 spec:
   replicas: 3
   selector:
@@ -19,7 +18,7 @@ spec:
     spec:
       containers:
       - name: auth-service
-        image: brunoelly/auth-service:latest
+        image: auth-service:latest
         ports:
         - containerPort: 8080
         env:
