--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-service
-  namespace: auth
   labels:
     app: auth-service
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 8080
       targetPort: 8080
